syntax = "proto3";

option csharp_namespace = "UserGRPCService";

package UserGRPC;

service UserGRPC {
  rpc GetUser (GetUserReq) returns (GetUserRes);
  rpc VerifyAccessToken (VerifyAccessTokenReq) returns (VerifyAccessTokenRes);
}

message VerifyAccessTokenReq {
  string Token = 1;
  string UserId = 2;
}

message VerifyAccessTokenRes {
  string UserId = 1;
  string Email = 2;
  string Role = 3;
  bool IsValid = 4;
}

message GetUserReq {
  string UserId = 1;
}

message GetUserRes {
  string Id = 1;
  string Email = 2;
  string Role = 3;
  string FirstName = 4;
  string LastName = 5;
}